# CSMPI

./: CMakeLists.txt  LICENSE  Makefile  README.md  csmpi.cpp  one_step_build.sh
analysis/: MotifDetector.py  TraceComparison.py  TraceDescription.py  UtilsDiff.py  compare_csmpi_traces.py  will_is_a_wizard.sh
analysis/SC17_poster/: EventToCallstack.py  NondeterminismReport.py  PosterPlots.py  TraceComparison.py  UtilsPreprocessing.py  compare_csmpi_traces.py  make_poster_plots.py
config/: baseline_timing.json  default_glibc.json  default_libunwind.json  expensive.json  generate_config.py  test_backtrace_glibc.json  test_backtrace_libunwind.json
config/mpi_function_subsets/: mcb.json  mini_amr.json  send_recv.json
include/csmpi/: callstack.hpp  configuration.hpp  runtime.hpp
spec/: spec.wrap
src/: Makefile  callstack.cpp  callstack_mpi.cpp  configuration.cpp  csmpi.cpp  runtime.cpp  test_app.c  test_backtrace.cpp  test_backtrace_perf.cpp  test_broadcast_config.cpp  test_csmpi_runtime.cpp  test_parse_config.cpp
test/: Makefile  nested_isend  nested_isend.cpp  nested_isend_templated.cpp  ping_pong.cpp  run_tests.sh
test/config/: test_ping_pong_glibc.json  test_ping_pong_libunwind.json  test_ping_pong_libunwind_translate.json  test_ping_pong_libunwind_translate_demangle.json
